--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="fa" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <title>amin</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>سایت من | امین</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: "Vazir", sans-serif;
+            background: linear-gradient(135deg, #4facfe, #00f2fe);
+            color: #fff;
+            text-align: center;
+        }
+        header {
+            padding: 60px 20px;
+        }
+        h1 {
+            font-size: 3rem;
+            margin-bottom: 10px;
+        }
+        p {
+            font-size: 1.2rem;
+        }
+        footer {
+            padding: 20px;
+            background: rgba(255,255,255,0.1);
+            font-size: 0.9rem;
+        }
+        a.button {
+            display: inline-block;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background: #fff;
+            color: #000;
+            text-decoration: none;
+            border-radius: 5px;
+            font-weight: bold;
+        }
+        a.button:hover {
+            background: #f0f0f0;
+        }
+    </style>
 </head>
-<body style="text-align:center; font-family:sans-serif;">
-    <h1>سلام دنیا</h1>
-    <p>به سایت Cloudflare Pages من خوش آمدید.</p>
+<body>
+    <header>
+        <h1>سلام دنیا! 🌍</h1>
+        <p>به سایت Cloudflare Pages من خوش آمدید.</p>
+        <a href="https://github.com/" class="button">رفتن به گیت‌هاب</a>
+    </header>
+    <footer>
+        ساخته شده با ❤️ توسط امین
+    </footer>
 </body>
 </html>
